--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hbs": "~4.0.1",
     "mongoose": "4.10.4",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "require-all": "latest"
   }
 }
