--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-handlebars": "^3.0.0",
     "express-session": "1.15.3",
     "handlebars": "^4.0.10",
-    "hbs": "~4.0.1",
+    "hbs": "^4.0.1",
+    "jquery": "^3.2.1",
     "mongoose": "4.10.4",
+    "mongoose-paginate": "5.0.3",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
+    "paginate-for-mongoose": "1.0.1",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
-    "require-all": "latest",
     "serve-favicon": "~2.4.2"
   }
 }
