--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "hunting-website",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
+  "main": "app.js",
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
